--- a/src/app/address-card/address-card.component.html
+++ b/src/app/address-card/address-card.component.html
@@ -1,1 +1,10 @@
-<p>address-card works!</p>
+<div>
+  <h1>Foo Bar</h1>
+  <h3>Software Developer</h3>
+  <p>66 SG Palya, Bangalore</p>
+  <div>
+    <p>Phone : </p>
+    <p>7829297366</p>
+    <p>7878787878</p>
+  </div>
+</div>
