--- a/src/app/address-card/address-card.component.html
+++ b/src/app/address-card/address-card.component.html
@@ -1,10 +1,10 @@
 <div>
-  <h1>Foo Bar</h1>
-  <h3>Software Developer</h3>
-  <p>66 SG Palya, Bangalore</p>
+  <h1>{{ user.name }}</h1>
+  <h3>{{ user.title }}</h3>
+  <p>{{ user.address }}</p>
   <div>
     <p>Phone : </p>
-    <p>7829297366</p>
-    <p>7878787878</p>
+    <p>{{ user.phone[0] }}</p>
+    <p>{{ user.phone[1] }}</p>
   </div>
 </div>
