--- a/src/app/address-card/address-card.component.html
+++ b/src/app/address-card/address-card.component.html
@@ -2,7 +2,7 @@
   <h1>{{ user.name }}</h1>
   <h3>{{ user.title }}</h3>
   <p>{{ user.address }}</p>
-  <div>
+  <div *ngIf="user.phone.length>0">
     <p>Phone : </p>
     <p *ngFor="let phoneNumber of user.phone">{{ phoneNumber }}</p>
   </div>
